--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Elite Intl Freight & Cargo Ltd">
+  <meta name="apple-mobile-web-app-title" content="Elite Freight & Cargo Ltd">
 
   
 
@@ -30,15 +30,15 @@
   
 
   <!-- Open Graph & SEO tags -->
-  <meta property="og:title" content="Elite Intl Freight & Cargo Ltd" />
+  <meta property="og:title" content="Elite Freight & Cargo Ltd" />
   <meta property="og:description" content="Built with FlutterFlow." />
   <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
-  <meta name="twitter:title" content="Elite Intl Freight & Cargo Ltd" />
+  <meta name="twitter:title" content="Elite Freight & Cargo Ltd" />
   <meta name="twitter:description" content="Built with FlutterFlow." />
   <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title> Elite Intl Freight & Cargo Ltd </title>
+  <title> Elite Freight & Cargo Ltd </title>
   <meta name="description" content="Built with FlutterFlow." />
     
 
